--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="banners.css">
     <link rel="stylesheet" href="components.css">
+    <script src="https://kit.fontawesome.com/dce6b18441.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="mobileMenuWrapper">
@@ -44,21 +45,21 @@
                     <img src="img/icons/boots.png" alt="hiking" height="50">
                     <div>
                         <span>Be it challenging rock climbing or a "family friendly" trip with beautiful sights - we know just the right place</span>
-                        <a class="buttonWithIcon">See places</a>
+                        <a class="buttonWithIcon">See places<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>   
                 <div class="hideOnMobile iconBox">
                     <img src="img/icons/hotel.png" alt="accomodation" height="50">
                     <div>
                         <span>Find and book accommodation easily, and enjoy your time off at one of our many certified partners</span>
-                        <a class="buttonWithIcon">Find accomodation</a>
+                        <a class="buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>    
                 <div class="iconBox">
                     <img src="img/icons/telephone.png" alt="mobile app" height="50">
                     <div>
                         <span>Create your own bucket list and plan your holiday in an easy and stress-free way</span>
-                        <a class="buttonWithIcon">Try it now</a>
+                        <a class="buttonWithIcon">Try it now<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>    
             </div>
@@ -75,7 +76,7 @@
             <div>
                 <h2>Rocking those hiking boots?</h2>
                 <p>Be it challenging rock climbing or just a “family friendly” trip with beautiful sights we know just the right place. Browse our trips and recommendations, and get practical information  by locals so you can make sure you are all set for your Nordic holiday.</p>
-                <a href="#" class="buttonWithIcon">Learn more</a>
+                <a href="#" class="buttonWithIcon">Learn more<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="overlapRight">
@@ -83,7 +84,7 @@
             <div>
                 <h2>Remember your beach attire</h2>
                 <p>Who said you can’t throw a “pool party” in -10 C? Grab your bikinis and dip in the hot pools of Iceland.</p>
-                <a href="#" class="buttonWithIcon">Learn more</a>
+                <a href="#" class="buttonWithIcon">Learn more<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <p class="centered smallTitle">Countries</p>
@@ -92,35 +93,35 @@
         <div class="grid4col">
             <div>
                 <img src="img/denmark.jpg" alt="Denmark" class="fullImg">
-                <a class="buttonWithIcon" href="#">Denmark</a>
+                <a class="buttonWithIcon" href="#">Denmark<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/faroeislands.jpg" alt="Faroe islands" class="fullImg">
-                <a class="buttonWithIcon" href="#">Faroe islands</a>
+                <a class="buttonWithIcon" href="#">Faroe islands<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/finland.jpg" alt="Finland" class="fullImg">
-                <a class="buttonWithIcon" href="#">Finland</a>
+                <a class="buttonWithIcon" href="#">Finland<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/greenland.jpg" alt="Greenland" class="fullImg">
-                <a class="buttonWithIcon" href="#">Greenland</a>
+                <a class="buttonWithIcon" href="#">Greenland<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/iceland.jpg" alt="Iceland" class="fullImg">
-                <a class="buttonWithIcon" href="#">Iceland</a>
+                <a class="buttonWithIcon" href="#">Iceland<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/norway.jpg" alt="Norway" class="fullImg">
-                <a class="buttonWithIcon" href="#">Norway</a>
+                <a class="buttonWithIcon" href="#">Norway<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/scotland.jpg" alt="Scotland" class="fullImg">
-                <a class="buttonWithIcon" href="#">Scotland</a>
+                <a class="buttonWithIcon" href="#">Scotland<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/sweden.jpg" alt="Sweden" class="fullImg">
-                <a class="buttonWithIcon" href="#">Sweden</a>
+                <a class="buttonWithIcon" href="#">Sweden<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <!-- end of containerwrapper -->  
@@ -133,7 +134,7 @@
                 <div class="bigBgWrapper1">
                     <h2>Natural nightlights</h2>
                     <p>Just because it's dark, it doesn't mean that there's nothing to see here. See the northern lights from our cottages</p>
-                    <a href="#" class="buttonWithIcon">Find accomodation</a>
+                    <a href="#" class="buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></a>
                 </div>
                 <div class="bigBgWrapper2Right">
                     <img src="img/video1.png" alt="Video 1" width="350">
@@ -152,25 +153,25 @@
                 <img src="img/icons/ship.png" alt="ship" width="100">
                 <p class="smallTitle"><strong>Things to do</strong></p>
                 <span>Looking for more adventure? Browse activities nearby</span>
-                <a class="buttonWithIcon centered" href="#">See offers</a>
+                <a class="buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="centeredForced">
                 <img src="img/icons/city.png" alt="city" width="100">
                 <p class="smallTitle"><strong>Places to see</strong></p>
                 <span>Explore the iconic places and historical buildings of the city</span>
-                <a class="buttonWithIcon centered" href="#">See offers</a>
+                <a class="buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="centeredForced">
                 <img src="img/icons/location-pin.png" alt="location" width="100">
                 <p class="smallTitle"><strong>Sightseeing made simple</strong></p>
                 <span>Use our maps, or ask our local guides to help you find your way</span>
-                <a class="buttonWithIcon centered" href="#">See offers</a>
+                <a class="buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="centeredForced">
                 <img src="img/icons/museum.png" alt="ship" width="100">
                 <p class="smallTitle"><strong>We've got stories to tell</strong></p>
                 <span>Today's culture is vastly affected by the past so why not explore it</span>
-                <a class="buttonWithIcon centered" href="#">See offers</a>
+                <a class="buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
 <div class="photoCollage">
@@ -182,7 +183,7 @@
         <h2>Try local specialties</h2>
         <p>Are you a passionate foodie? Try the local specialties for cheaper outside of the season.</p>
         <p>Browse through our recommendations for places to eat, and see what you’ll want to bring home.</p>
-        <a href="#" class="buttonWithIcon">See offers</a>
+        <a href="#" class="buttonWithIcon">See offers<i class="fas fa-angle-right"></i></a>
     </div>
     <div>
         <img src="img/food2.jpg" alt="try local specialties">
@@ -229,7 +230,7 @@
                                 <input type="text" name="message" id="message" required placeholder="message">
                                 <label for="message" >Your message:</label>
                             </div>
-                            <button class="buttonWithIcon" type="submit">Send message</button>
+                            <button class="buttonWithIcon" type="submit">Send message<i class="fas fa-angle-right"></i></button>
                         </form>
                     </div>
                 </div>
@@ -263,7 +264,7 @@
                 <input type="email" id="emailNewsletter">
                 <label for="emailNewsletter">Your email</label>
             </div>
-            <button type="submit" class="buttonWithIcon" >Sign up</button>
+            <button type="submit" class="buttonWithIcon" >Sign up<i class="fas fa-angle-right"></i></button>
         </form>
     </div>
     <div>
