--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="img/icons/telephone.png" alt="mobile app" height="50">
                     <div>
                         <span>Create your own bucket list and plan your holiday in an easy and stress-free way</span>
-                        <a class="buttonWithIcon">Try it now<i class="fas fa-angle-right"></i></a>
+                        <a class="buttonWithIcon" href="bucketlist.html">Try it now<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>    
             </div>
