created country pages with placeholder content

--- a/bucketlist.html
+++ b/bucketlist.html
@@ -20,6 +20,7 @@
             <a href="denmark.html" class="subMenu">Denmark</a><br>
             <a href="faroeislands.html" class="subMenu">Faroe islands</a><br>
             <a href="finland.html" class="subMenu">Finland</a><br>
+            <a href="greenland.html" class="subMenu">Greenland</a><br>
             <a href="iceland.html" class="subMenu">Iceland</a><br>
             <a href="norway.html" class="subMenu">Norway</a><br>
             <a href="scotland.html" class="subMenu">Scotland</a><br>
@@ -105,56 +106,56 @@
                         <img src="img/trolltunga.png" alt="Trolltunga">
                         <h3>Trolltunga</h3>
                         <p>Hiking, summer, camping</p>
-                        <button class="greenBtn">Read more</button>
+                        <a class="greenBtn">Read more</a>
                     </div>
                     <div class="item">
                         <button class="addToListBtn"><i class="fas fa-plus-circle"></i>Add to my bucketlist</button>
                         <img src="img/trolltunga.png" alt="Trolltunga">
                         <h3>Trolltunga</h3>
                         <p>Hiking, summer, camping</p>
-                        <button class="greenBtn">Read more</button>
+                        <a class="greenBtn">Read more</a>
                     </div>
                     <div class="item">
                         <button class="addToListBtn"><i class="fas fa-plus-circle"></i>Add to my bucketlist</button>
                         <img src="img/trolltunga.png" alt="Trolltunga">
                         <h3>Trolltunga</h3>
                         <p>Hiking, summer, camping</p>
-                        <button class="greenBtn">Read more</button>
+                        <a class="greenBtn">Read more</a>
                     </div>
                     <div class="item">
                         <button class="addToListBtn"><i class="fas fa-plus-circle"></i>Add to my bucketlist</button>
                         <img src="img/trolltunga.png" alt="Trolltunga">
                         <h3>Trolltunga</h3>
                         <p>Hiking, summer, camping</p>
-                        <button class="greenBtn">Read more</button>
+                        <a class="greenBtn">Read more</a>
                     </div>
                     <div class="item">
                         <button class="addToListBtn"><i class="fas fa-plus-circle"></i>Add to my bucketlist</button>
                         <img src="img/trolltunga.png" alt="Trolltunga">
                         <h3>Trolltunga</h3>
                         <p>Hiking, summer, camping</p>
-                        <button class="greenBtn">Read more</button>
+                        <a class="greenBtn">Read more</a>
                     </div>
                     <div class="item">
                         <button class="addToListBtn"><i class="fas fa-plus-circle"></i>Add to my bucketlist</button>
                         <img src="img/trolltunga.png" alt="Trolltunga">
                         <h3>Trolltunga</h3>
                         <p>Hiking, summer, camping</p>
-                        <button class="greenBtn">Read more</button>
+                        <a class="greenBtn">Read more</a>
                     </div>
                     <div class="item">
                         <button class="addToListBtn"><i class="fas fa-plus-circle"></i>Add to my bucketlist</button>
                         <img src="img/trolltunga.png" alt="Trolltunga">
                         <h3>Trolltunga</h3>
                         <p>Hiking, summer, camping</p>
-                        <button class="greenBtn">Read more</button>
+                        <a class="greenBtn">Read more</a>
                     </div>
                     <div class="item">
                         <button class="addToListBtn"><i class="fas fa-plus-circle"></i>Add to my bucketlist</button>
                         <img src="img/trolltunga.png" alt="Trolltunga">
                         <h3>Trolltunga</h3>
                         <p>Hiking, summer, camping</p>
-                        <button class="greenBtn">Read more</button>
+                        <a class="greenBtn">Read more</a>
                     </div>
                 </div>
             </div>
