--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <a href="denmark.html" class="subMenu">Denmark</a><br>
                 <a href="faroeislands.html" class="subMenu">Faroe islands</a><br>
                 <a href="finland.html" class="subMenu">Finland</a><br>
+                <a href="greenland.html" class="subMenu">Greenland</a><br>
                 <a href="iceland.html" class="subMenu">Iceland</a><br>
                 <a href="norway.html" class="subMenu">Norway</a><br>
                 <a href="scotland.html" class="subMenu">Scotland</a><br>
@@ -238,7 +239,7 @@
         </div>
     </div>
     <div class="bodyWrapper">
-<footer>
+<footer class="overlappingFooter">
     <div>
         <h4>Menu</h4>
         <a href="#">Home</a>
@@ -255,13 +256,13 @@
     </div>
     <div>
         <h4>newsletter</h4>
-        <form>
+        <form class="footerForm">
             <div>
-                <input type="text" id="nameNewsletter">
+                <input type="text" id="nameNewsletter" placeholder="name">
                 <label for="nameNewsletter">Your name</label>
             </div>
             <div>
-                <input type="email" id="emailNewsletter">
+                <input type="email" id="emailNewsletter" placeholder="email">
                 <label for="emailNewsletter">Your email</label>
             </div>
             <button type="submit" class="buttonWithIcon" >Sign up<i class="fas fa-angle-right"></i></button>
