--- a/trips.html
+++ b/trips.html
@@ -23,6 +23,7 @@
                 <a href="denmark.html" class="subMenu">Denmark</a><br>
                 <a href="faroeislands.html" class="subMenu">Faroe islands</a><br>
                 <a href="finland.html" class="subMenu">Finland</a><br>
+                <a href="greenland.html" class="subMenu">Greenland</a><br>
                 <a href="iceland.html" class="subMenu">Iceland</a><br>
                 <a href="norway.html" class="subMenu">Norway</a><br>
                 <a href="scotland.html" class="subMenu">Scotland</a><br>
@@ -41,14 +42,36 @@
                     <span class="smallTitle">Get inspiration from our premade</span>
                     <h1>Trips</h1>
                 </div>
-   
+                <div class="hideOnMobile iconBox">
+                    <img src="img/icons/boots.png" alt="hiking" height="50">
+                    <div>
+                        <span>Find ideas for hikers, families, foodies or history nerds and get inspiration for your dream holiday.</span>
+                        <a class="buttonWithIcon" href="#trips">See trips<i class="fas fa-angle-right"></i></a>
+                    </div>
+                </div>   
+                <div class="hideOnMobile iconBox">
+                    <img src="img/icons/hotel.png" alt="accomodation" height="50">
+                    <div>
+                        <span>Find and book accommodation easily, and enjoy your time off at one of our many certified partners</span>
+                        <a class="buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></a>
+                    </div>
+                </div>    
+                <div class="iconBox">
+                    <img src="img/icons/telephone.png" alt="mobile app" height="50">
+                    <div>
+                        <span>Create your own bucket list and plan your holiday in an easy and stress-free way</span>
+                        <a class="buttonWithIcon" href="bucketlist.html">Try it now<i class="fas fa-angle-right"></i></a>
+                    </div>
+                </div>    
             </div>
             </div>
             </div>
+            
         </div>
 <div class="bodyWrapper">
+    <div class="divider"></div>
     <div class="contentWrapper">
-
+<h2 class="centered" id="trips">Trips</h2>
         <div class="grid4col">
 
         </div>
@@ -56,12 +79,13 @@
 </div>
 <template>
     <div>
-        <img src="" alt="">
+        <img class="halfImg" src="" alt="">
         <h3>Trip name</h3>
         <p>Trip intro</p>
         <a class="buttonWithIcon">Read more</a>
         </div>
 </template>
 <script src="trips.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
