fixed P width on index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="divider"></div>
     <div class="contentWrapper">
         <h2 class="centered">About</h2>
-        <p class="centered">Some of us like to go for mediterranean or even tropical adventures in their freetimes, while some prefer to explore other mysterious areas. Explore the world of the sagas and myths, try local specialties that you would otherwise never even think of eating, hike high in 1600 meters or dive deep in hot lagoons.Usual holiday activities in an unusual way.</p>
+        <p class="centered P-width900">Some of us like to go for mediterranean or even tropical adventures in their freetimes, while some prefer to explore other mysterious areas. Explore the world of the sagas and myths, try local specialties that you would otherwise never even think of eating, hike high in 1600 meters or dive deep in hot lagoons.Usual holiday activities in an unusual way.</p>
         <div class="overlapLeft">
             <img src="img/hiking.jpg" alt="hiking">
             <div>
@@ -90,7 +90,7 @@
         </div>
         <p class="centered smallTitle">Countries</p>
         <h2 class="centered">Explore our destinations</h2>
-        <p class="centered">Nordic landscapes are unique and outstandingly beautiful - but they can be tricky to get around. Get practical information by locals of each country about how to prepare for your trip.</p>
+        <p class="centered P-width900">Nordic landscapes are unique and outstandingly beautiful - but they can be tricky to get around. Get practical information by locals of each country about how to prepare for your trip.</p>
         <div class="grid4col">
             <div>
                 <img src="img/denmark.jpg" alt="Denmark" class="fullImg">
