fixed mobile view if 3 icons are displayed on banners

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="bannerWrapper">
             <div class="bgContainer" id="contactbanner">
             <div class="overlay">
-            <div class="topBg" id="contactIcons">
+            <div class="topBg">
                 <div id="subpageTitle">
                     <span class="smallTitle">Do you have any questions?</span>
                     <h1>Contact us</h1>
