--- a/trips.html
+++ b/trips.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Journey North | Home</title>
+    <title>Your Journey North | Trips</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="banners.css">
     <link rel="stylesheet" href="components.css">
