corrected img path for mobile menu icons

--- a/places/norway/trolltunga.html
+++ b/places/norway/trolltunga.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div id="mobileMenuWrapper">
-            <img src="img/icons/menu.png" alt="mobile menu" id="openMobileMenu"
+            <img src="../../img/icons/menu.png" alt="mobile menu" id="openMobileMenu"
             class="mobileMenu">
     </div>
         <div class="menu">
-            <img src="img/icons/close.png" alt="close menu" 
+            <img src="../../img/icons/close.png" alt="close menu" 
             id="closeMobileMenu" class="mobileMenu" height="30">
             <nav>
                 <a href="index.html">Home</a><br>
