replaced some png icons with svg

--- a/countries.html
+++ b/countries.html
@@ -43,24 +43,26 @@
                     <h1>Countries</h1>
                 </div>
                 <div class="hideOnMobile iconBox">
-                    <img src="img/icons/boots.png" alt="hiking" height="50">
+                    <i class="fas fa-mountain icon-white icon-large centered"></i>
                     <div>
                         <span>Find the right place for your hiking or sightseeing needs and get useful tips to make the most our of your dream holiday</span>
-                        <a class="buttonWithIcon" href="#countries">See countries<i class="fas fa-angle-right"></i></a>
+                        <button class="button buttonWithIcon" onclick="window.location.href='#countries'">See countries<i class="fas fa-angle-right"></i></button>
                     </div>
                 </div>   
                 <div class="hideOnMobile iconBox">
-                    <img src="img/icons/hotel.png" alt="accomodation" height="50">
+                    <i class="fas fa-hotel icon-white icon-large centered"></i>
                     <div>
                         <span>Find and book accommodation easily, and enjoy your time off at one of our many certified partners we can recommend</span>
-                        <a class="buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></a>
+                        <div>
+                            <button class="button buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></button>
+                        </div>
                     </div>
                 </div>    
                 <div class="iconBox">
-                    <img src="img/icons/telephone.png" alt="mobile app" height="50">
+                    <i class="fas fa-mobile-alt icon-white icon-large centered"></i>
                     <div>
                         <span>Create your own bucket list with our app and start planning your dream holiday in an easy and stress-free way</span>
-                        <a class="buttonWithIcon" href="bucketlist.html">Try it now<i class="fas fa-angle-right"></i></a>
+                        <button class="button buttonWithIcon" onclick="window.location.href='bucketlist.html'">Try it now<i class="fas fa-angle-right"></i></button>
                     </div>
                 </div>    
             </div>
@@ -86,7 +88,7 @@
                 <h3>Faroe Islands</h3>
                 <p>About the Faroe Islands</p>
                 <p>Perfect for:</p>
-                <a href="denmark.html" class="greenBtn">Read more</a>
+                <a href="faroeislands.html" class="greenBtn">Read more</a>
             </div>
         </div>
         <div>
@@ -95,7 +97,7 @@
                 <h3>Finland</h3>
                 <p>About Finland</p>
                 <p>Perfect for:</p>
-                <a href="denmark.html" class="greenBtn">Read more</a>
+                <a href="finland.html" class="greenBtn">Read more</a>
             </div>
         </div>
         <div>
@@ -104,7 +106,7 @@
                 <h3>Greenland</h3>
                 <p>About Greenland</p>
                 <p>Perfect for:</p>
-                <a href="denmark.html" class="greenBtn">Read more</a>
+                <a href="greenland.html" class="greenBtn">Read more</a>
             </div>
         </div>
         <div>
@@ -113,7 +115,7 @@
                 <h3>Iceland</h3>
                 <p>About Iceland</p>
                 <p>Perfect for:</p>
-                <a href="denmark.html" class="greenBtn">Read more</a>
+                <a href="iceland.html" class="greenBtn">Read more</a>
             </div>
         </div>
         <div>
@@ -122,7 +124,7 @@
                 <h3>Norway</h3>
                 <p>About Norway</p>
                 <p>Perfect for:</p>
-                <a href="denmark.html" class="greenBtn">Read more</a>
+                <a href="norway.html" class="greenBtn">Read more</a>
             </div>
         </div>
         <div>
@@ -131,7 +133,7 @@
                 <h3>Scotland</h3>
                 <p>About Scotland</p>
                 <p>Perfect for:</p>
-                <a href="denmark.html" class="greenBtn">Read more</a>
+                <a href="scotland.html" class="greenBtn">Read more</a>
             </div>
         </div>
         <div>
@@ -140,7 +142,7 @@
                 <h3>Sweden</h3>
                 <p>About Sweden</p>
                 <p>Perfect for:</p>
-                <a href="denmark.html" class="greenBtn">Read more</a>
+                <a href="sweden.html" class="greenBtn">Read more</a>
             </div>
         </div>
     </div>
@@ -170,7 +172,7 @@
                         <input type="email" id="emailNewsletter" placeholder="email">
                         <label for="emailNewsletter">Your email</label>
                     </div>
-                    <button type="submit" class="buttonWithIcon" >Sign up<i class="fas fa-angle-right"></i></button>
+                    <button type="submit" class="button buttonWithIcon" >Sign up<i class="fas fa-angle-right"></i></button>
                 </form>
             </div>
             <div>
