--- a/denmark.html
+++ b/denmark.html
@@ -50,17 +50,20 @@
                     </div>
                 </div>   
                 <div class="hideOnMobile iconBox">
-                    <img src="img/icons/hotel.png" alt="accomodation" height="50">
-                    <div>
+                    <i class="fas fa-hotel icon-white icon-large centered"></i> <div>
                         <span>Find and book accommodation easily, and enjoy your time off at one of our many certified partners</span>
-                        <a class="buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></a>
+                        <div>
+                            <button class="button buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></button>
+                          </div>
                     </div>
                 </div>    
                 <div class="iconBox">
-                    <img src="img/icons/telephone.png" alt="mobile app" height="50">
+                    <i class="fas fa-mobile-alt icon-white icon-large centered"></i>
                     <div>
                         <span>Create your own bucket list and plan your holiday in an easy and stress-free way</span>
-                        <a class="buttonWithIcon" href="bucketlist.html">Try it now<i class="fas fa-angle-right"></i></a>
+                        <div>
+                            <button class="button buttonWithIcon" href="https://petra2301.github.io/north-reactapp/">Try it now<i class="fas fa-angle-right"></i></button>
+                        </div>
                     </div>
                 </div>    
             </div>
