--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
                     <h1>North</h1>
                 </div>
                 <div class="hideOnMobile iconBox">
-                    <img src="img/icons/boots.png" alt="hiking" height="50">
+                    <i class="fas fa-mountain icon-white icon-large centered"></i>
                     <div>
-                        <span>Be it challenging rock climbing or a "family friendly" trip with beautiful sights - we know just the right place</span>
-                        <a class="buttonWithIcon">See places<i class="fas fa-angle-right"></i></a>
+                        <span>Be it challenging rock climbing or a "family friendly" trip - we know just the right place</span>
+                        <a class="button buttonWithIcon">See places<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>   
                 <div class="hideOnMobile iconBox">
-                    <img src="img/icons/hotel.png" alt="accomodation" height="50">
+                    <i class="fas fa-hotel icon-white icon-large centered"></i>
                     <div>
                         <span>Find and book accommodation easily, and enjoy your time off at one of our many certified partners</span>
-                        <a class="buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></a>
+                        <a class="button buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>    
                 <div class="iconBox">
-                    <img src="img/icons/telephone.png" alt="mobile app" height="50">
+                    <i class="fas fa-mobile-alt icon-white icon-large centered"></i>
                     <div>
                         <span>Create your own bucket list and plan your holiday in an easy and stress-free way</span>
-                        <a class="buttonWithIcon" href="bucketlist.html">Try it now<i class="fas fa-angle-right"></i></a>
+                        <a class="button buttonWithIcon" href="https://petra2301.github.io/north-reactapp/">Try it now<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>    
             </div>
@@ -71,13 +71,15 @@
     <div class="divider"></div>
     <div class="contentWrapper">
         <h2 class="centered">About</h2>
-        <p class="centered P-width900">Some of us like to go for mediterranean or even tropical adventures in their freetimes, while some prefer to explore other mysterious areas. Explore the world of the sagas and myths, try local specialties that you would otherwise never even think of eating, hike high in 1600 meters or dive deep in hot lagoons.Usual holiday activities in an unusual way.</p>
+        <p class="centered P-width900">Some of us likes going for mediterranean or even tropical adventures, others prefer exploring more mysterious areas. Explore the world of the sagas and myths, try local specialties, hike high in 1600 meters or dive deep in hot lagoons. Usual holiday activities in an unusual setting.</p>
         <div class="overlapLeft">
             <img src="img/hiking.jpg" alt="hiking">
             <div>
                 <h2>Rocking those hiking boots?</h2>
                 <p>Be it challenging rock climbing or just a “family friendly” trip with beautiful sights we know just the right place. Browse our trips and recommendations, and get practical information  by locals so you can make sure you are all set for your Nordic holiday.</p>
-                <a href="#" class="buttonWithIcon">Learn more<i class="fas fa-angle-right"></i></a>
+                    <div>
+                        <button href="#" class="button buttonWithIcon">Learn more<i class="fas fa-angle-right"></i></button>
+                    </div>
             </div>
         </div>
         <div class="overlapRight">
@@ -85,7 +87,9 @@
             <div>
                 <h2>Remember your beach attire</h2>
                 <p>Who said you can’t throw a “pool party” in -10 C? Grab your bikinis and dip in the hot pools of Iceland.</p>
-                <a href="#" class="buttonWithIcon">Learn more<i class="fas fa-angle-right"></i></a>
+                <div>
+                    <button href="#" class="button buttonWithIcon">Learn more<i class="fas fa-angle-right"></i></button>
+                </div>
             </div>
         </div>
         <p class="centered smallTitle">Countries</p>
@@ -94,35 +98,35 @@
         <div class="grid4col">
             <div>
                 <img src="img/denmark.jpg" alt="Denmark" class="fullImg">
-                <a class="buttonWithIcon" href="#">Denmark<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon" href="denmark.html">Denmark<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/faroeislands.jpg" alt="Faroe islands" class="fullImg">
-                <a class="buttonWithIcon" href="#">Faroe islands<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon" href="faroeislands.html">Faroe islands<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/finland.jpg" alt="Finland" class="fullImg">
-                <a class="buttonWithIcon" href="#">Finland<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon" href="finland.html">Finland<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/greenland.jpg" alt="Greenland" class="fullImg">
-                <a class="buttonWithIcon" href="#">Greenland<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon" href="greenland.html">Greenland<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/iceland.jpg" alt="Iceland" class="fullImg">
-                <a class="buttonWithIcon" href="#">Iceland<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon" href="iceland.html">Iceland<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/norway.jpg" alt="Norway" class="fullImg">
-                <a class="buttonWithIcon" href="#">Norway<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon" href="norway.html">Norway<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/scotland.jpg" alt="Scotland" class="fullImg">
-                <a class="buttonWithIcon" href="#">Scotland<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon" href="scotland.html">Scotland<i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <img src="img/sweden.jpg" alt="Sweden" class="fullImg">
-                <a class="buttonWithIcon" href="#">Sweden<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon" href="sweden.html">Sweden<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <!-- end of containerwrapper -->  
@@ -135,7 +139,7 @@
                 <div class="bigBgWrapper1">
                     <h2>Natural nightlights</h2>
                     <p>Just because it's dark, it doesn't mean that there's nothing to see here. See the northern lights from our cottages</p>
-                    <a href="#" class="buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></a>
+                    <button href="#" class="button buttonWithIcon">Find accomodation<i class="fas fa-angle-right"></i></button>
                 </div>
                 <div class="bigBgWrapper2Right">
                     <img src="img/video1.png" alt="Video 1" width="350">
@@ -151,28 +155,28 @@
         <h2 class="centeredForced">Irresistible offers</h2>
         <div class="grid4col">
             <div class="centeredForced">
-                <img src="img/icons/ship.png" alt="ship" width="100">
+                <i class="fas fa-ship icon-white icon-large"></i>
                 <p class="smallTitle"><strong>Things to do</strong></p>
                 <span>Looking for more adventure? Browse activities nearby</span>
-                <a class="buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="centeredForced">
-                <img src="img/icons/city.png" alt="city" width="100">
-                <p class="smallTitle"><strong>Places to see</strong></p>
+                <i class="fas fa-city icon-white icon-large"></i>
+                <p class="smallTitle"><strong>Places to be</strong></p>
                 <span>Explore the iconic places and historical buildings of the city</span>
-                <a class="buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="centeredForced">
-                <img src="img/icons/location-pin.png" alt="location" width="100">
+                <i class="fas fa-map-marked-alt icon-white icon-large"></i>
                 <p class="smallTitle"><strong>Sightseeing made simple</strong></p>
                 <span>Use our maps, or ask our local guides to help you find your way</span>
-                <a class="buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="centeredForced">
-                <img src="img/icons/museum.png" alt="ship" width="100">
+                <i class="fas fa-university icon-white icon-large"></i>
                 <p class="smallTitle"><strong>We've got stories to tell</strong></p>
                 <span>Today's culture is vastly affected by the past so why not explore it</span>
-                <a class="buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
+                <a class="button buttonWithIcon centered" href="#">See offers<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
 <div class="photoCollage">
@@ -184,7 +188,9 @@
         <h2>Try local specialties</h2>
         <p>Are you a passionate foodie? Try the local specialties for cheaper outside of the season.</p>
         <p>Browse through our recommendations for places to eat, and see what you’ll want to bring home.</p>
-        <a href="#" class="buttonWithIcon">See offers<i class="fas fa-angle-right"></i></a>
+        <div>
+            <button href="#" class="button buttonWithIcon">See offers<i class="fas fa-angle-right"></i></button>
+        </div>
     </div>
     <div>
         <img src="img/food2.jpg" alt="try local specialties">
@@ -204,15 +210,15 @@
                     <h2>Do you have any questions?</h2>
                     <p>Our staff are happy to help during the local working hours. You can call the offices, or use the form below to contact us.</p>
                     <div class="iconBox">
-                            <img src="img/icons/phone2.png" alt="phone">
+                        <i class="fas fa-mobile-alt icon-white icon-medium centered"></i>
                             <p>Tel.: +1 23 45678</p>
                         </div>
                         <div class="iconBox">
-                            <img src="img/icons/mail.png" alt="mail">
+                            <i class="far fa-envelope icon-white icon-medium centered"></i>
                             <p>info@yourjourneynorth.dk</p>
                         </div>
                         <div class="iconBox">
-                            <img src="img/icons/address.png" alt="address">
+                            <i class="fas fa-map-marker-alt icon-white icon-medium centered"></i>
                             <p>Fosenkaia 7,<br>Trondheim<br>Norway</p>
                         </div>
                     </div>
@@ -231,7 +237,7 @@
                                 <input type="text" name="message" id="message" required placeholder="message">
                                 <label for="message" >Your message:</label>
                             </div>
-                            <button class="buttonWithIcon" type="submit">Send message<i class="fas fa-angle-right"></i></button>
+                            <button class="button buttonWithIcon" type="submit">Send message<i class="fas fa-angle-right"></i></button>
                         </form>
                     </div>
                 </div>
@@ -265,21 +271,21 @@
                 <input type="email" id="emailNewsletter" placeholder="email">
                 <label for="emailNewsletter">Your email</label>
             </div>
-            <button type="submit" class="buttonWithIcon" >Sign up<i class="fas fa-angle-right"></i></button>
+            <button type="submit" class="button buttonWithIcon" >Sign up<i class="fas fa-angle-right"></i></button>
         </form>
     </div>
     <div>
         <h4>Contact</h4>
         <div class="iconBox">
-            <img src="img/icons/phone2.png" alt="phone">
+            <i class="fas fa-mobile-alt icon-white icon-medium centered"></i>
             <span>Tel.: +1 23 45678</span>
         </div>
         <div class="iconBox">
-            <img src="img/icons/mail.png" alt="mail">
+            <i class="far fa-envelope icon-white icon-medium centered"></i>
             <span>info@yourjourneynorth.dk</span>
         </div>
         <div class="iconBox">
-            <img src="img/icons/address.png" alt="address">
+            <i class="fas fa-map-marker-alt icon-white icon-medium centered"></i>
             <span>Fosenkaia 7,<br>Trondheim<br>Norway</span>
         </div>
     </div>
